# happyflowers

./: .editorconfig  .gitignore  README.md  index.html
backend/: Main.hs  README.md  cabal.config  rpi.cabal
backend/HappyFlowers/: Type.hs
backend/HappyFlowers/API/: Application.hs  Middleware.hs  Route.hs
backend/HappyFlowers/Hardware/: Device.hs  GPIO.hs  Process.hs
backend/HappyFlowers/WS/: Application.hs  Communication.hs
css/: style.css
dashboard/: README.md  package.json
dashboard/public/: index.html
dashboard/src/: index.css  strings.js
dashboard/src/actions/: auth.js  history.js  index.js  notifications.js  settings.js
dashboard/src/components/: Flower.css  Loader.css  Petals.css  Petals.js  Widget.js
dashboard/src/containers/: Connector.js  Header.css  Login.css  Moisture.js  Settings.js  Snapshot.js  Stats.css  Stats.js  Stream.js  Temperature.js
dashboard/src/reducers/: history.js
docs/: Project Agreement.pages  Project Report.pages  Project schedule.numbers
docs/src/: Figure10.ccd  Figure11.ccd  Figure12.ccd  Figure13.ccd  Figure14.ccd  Figure15.ccd  Figure16.ccd  Figure17.ccd  Figure18.ccd  Figure19.ccd  Figure20.ccd  Figure5.ccd  Figure6.ccd  Figure8.ccd  Figure9.sketch  architecture.ccd  chirp.fzz  figure18new.ccd  figure20new.ccd  figure8new.ccd  pump.fzz
hardware/: README.md
rpi/: .gitignore  I2CTest.hs  Main.hs  README.md  cabal.config  data.sql  happyflowers.db  happyflowers.sql  rpi.cabal
rpi/HappyFlowers/: Config.hs  DB.hs  Server.hs  Type.hs  Types.hs
rpi/HappyFlowers/API/: Application.hs  Config.hs  Middleware.hs  Middlewares.hs  Route.hs  Routes.hs  Server.hs  Types.hs  WS.hs
rpi/HappyFlowers/Hardware/: Application.hs  Client.hs  Communication.hs  Device.hs  DeviceMock.hs  GPIO.hs  I2C.hs  Mock.hs  Process.hs
rpi/HappyFlowers/RPI/: Sensor.hs
rpi/HappyFlowers/WS/: Application.hs  Communication.hs
rpi/REST/: API.hs  Config.hs  Model.hs
sketch/: flower.sketch  icons.sketch  screens.sketch
web/: README.md  package.json
web/public/: index.html
web/src/: App.css  App.js  chartOptions.js  events.js  index.css  index.js  sockets.js  strings.js
web/src/actions/: auth.js  history.js  index.js  settings.js
web/src/components/: Alert.css  Flower.css  Flower.js  Footer.css  Footer.js  Header.css  Header.js  History.js  Loader.css  Loader.js  Petals.css  Petals.js  Quote.js  Snapashot.js  Snapshot.js  Stat.css  Stat.js  Stats.css  Stats.js  Stream.js  Tooltip.css  Tooltip.js  Widget.css
web/src/containers/: Connector.js  Dashboard.js  Header.js  History.js  Login.css  Login.js  Moisture.js  Settings.js  Snapshot.js  Stats.css  Stats.js  Stream.css  Stream.js  Temperature.js
web/src/middleware/: api.js
web/src/pages/: Dashboard.js  Login.css  Login.js  Settings.js
web/src/reducers/: auth.js  history.js  index.js  notifications.js  pump.js  settings.js
web/src/widgets/: History.js  Snapshot.css  Snapshot.js  Stats.js  Stream.js  Widget.js
