name:          rpi
version:       0.0.1
build-type:    Simple
cabal-version: >=1.22

Flag Development
    Description: Enables mocking features for testing without the RPi.
    Default:     True

executable rpi
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base
                      , mtl
                      , bytestring
                      , text
                      , sqlite-simple
                      , jose-jwt
                      , http-types
                      , wai-extra
                      , wai-middleware-static
                      , aeson
                      , scotty
                      , websockets
                      , wai
                      , time
                      , HPi
                      , network
                      , unbounded-delays
    default-language:   Haskell2010

    if flag(Development)
        cpp-options:    -DDevelopment

executable i2ctest
    main-is:            I2CTest.hs
    build-depends:      base
                      , bytestring
                      , text
                      , HPi
    default-language:   Haskell2010
